--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,4 +29,5 @@ layout: default
   {% if page.mathjax == true %}
    {% include mathjax.html %}
   {% endif %}
+  {% include history.html %}
 </article>
