--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,7 @@ layout: default
     {{ content }}
   </div>
 
+  <!-- TODO probably delete this -->
   {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
   {%- endif -%}
